Client (Add Home Page Content And Components)

--- a/client/src/assets/css/main.css
+++ b/client/src/assets/css/main.css
@@ -13,3 +13,9 @@ body,
   color: var(--color-text);
   font-family: "Tajawal" !important;
 }
+
+
+::-webkit-scrollbar{
+  display: none !important;
+  width: 0;
+}
